src/test/deca/context/invalid/expr_cast_null_to_int.deca
// Test of the rule (3.39) : can't cast null to int.

{
	int var1;
	null var2;
	var1 = (int)(var2);
}

// Résultat :
//# a
